--- a/html/popup.html
+++ b/html/popup.html
@@ -114,7 +114,7 @@
         <p id="saving" class="hide">Saving<span class="one">.</span><span class="two">.</span><span class="three">.</span></p>
         <p id="warning" class="hide">Warning: </p>
         <p id="success" class="hide fadeOut">Changes saved!</p>
-        <p id="error" class="hide"><b>Error:</b> You must be logged into Wordpress as admin. <a target="_blank" href="#">Login</a> and try again.</p>
+        <p id="error" class="hide"></p>
     </div>
 
    <script src="../js/popup.js" type="text/javascript"></script>
