report no new changes

--- a/html/popup.html
+++ b/html/popup.html
@@ -115,6 +115,7 @@
             <span data-message="saving"></span><span class="one">.</span><span class="two">.</span><span class="three">.</span>
         </p>
         <p id="success" class="hide fadeOut" data-message="saved"></p>
+        <p id="info" class="hide fadeOut"></p>
         <p id="error" class="hide"></p>
     </div>
 
